<resources>
    <string name="app_name">Déclare ton morveux</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="register">S\'enregistrer</string>
    <string name="authenticate">S\'authentifier</string>
    <string name="school_name">Nom de l\'école</string>
    <string name="search">Rechercher</string>
    <string name="sicks">Malades</string>
    <string name="contagious">Contagieux</string>
    <string name="declare">Declarer</string>
    <string name="add_child">Ajouter un morveux</string>
    <string name="logout">Se déconnecter</string>
    <string name="save">Enregistrer</string>
    <string name="child_first_name">Prénom du morveux</string>
    <string name="school">École</string>
    <string name="cancel">Annuler</string>
</resources>